--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -25,7 +25,7 @@ jobs:
           npm i
           npm run test
 
-  if_merged:
+  deploy:
     runs-on: ubuntu-latest
     # if: github.event_name == 'push' && (github.ref == 'refs/heads/main') || (github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true && github.ref == 'refs/heads/main')
     environment:
