--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -2,7 +2,7 @@ name: Build and Deploy
 
 on:
   push:
-    types: [opened, synchronize, reopened, closed]
+    # types: [opened, synchronize, reopened, closed]
     branches:
       - dev
 
